load("//build/bazelutil/unused_checker:unused.bzl", "get_x_data")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "acceptance",
    srcs = [
        "flags.go",
        "test_acceptance.go",  # keep
        "util_cluster.go",
        "util_docker.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/acceptance",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/acceptance/cluster",
        "//pkg/base",
        "//pkg/build/bazel",
        "//pkg/security/securityassets",  # keep
        "//pkg/security/securitytest",  # keep
        "//pkg/security/username",
        "//pkg/server",  # keep
        "//pkg/testutils",
        "//pkg/testutils/serverutils",  # keep
        "//pkg/testutils/testcluster",  # keep
        "//pkg/util/log",
        "//pkg/util/randutil",  # keep
        "//pkg/util/stop",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_containerd_containerd//platforms",
        "@com_github_docker_docker//api/types",
        "@com_github_docker_docker//api/types/container",
    ],
)

go_test(
    name = "acceptance_test",
    size = "enormous",
    srcs = [
        "adapter_test.go",
        "cli_test.go",
        "compose_test.go",
        "debug_remote_test.go",
        "main_test.go",
    ],
    data = glob([
        "testdata/**",
        "compose/**",
    ]) + [
        "//pkg/cli:interactive_tests",
    ],
    embed = [":acceptance"],
    gotags = ["acceptance"],
    tags = ["integration"],
    deps = [
        "//pkg/acceptance/cluster",
        "//pkg/build/bazel",
        "//pkg/security",  # keep
        "//pkg/security/username",
        "//pkg/testutils/skip",
        "//pkg/util/log",
    ],
)

get_x_data(name = "get_x_data")
