load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "base",
    srcs = [
        "addr_validation.go",
        "cluster_id.go",
        "config.go",
        "constants.go",
        "license.go",
        "node_id.go",
        "store_spec.go",
        "test_server_args.go",
        "testclusterreplicationmode_string.go",
        "testing_knobs.go",
        "zone.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/base",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cli/cliflags",
        "//pkg/roachpb",
        "//pkg/security",
        "//pkg/settings/cluster",
        "//pkg/util",
        "//pkg/util/envutil",
        "//pkg/util/errorutil",
        "//pkg/util/humanizeutil",
        "//pkg/util/log",
        "//pkg/util/mon",
        "//pkg/util/netutil",
        "//pkg/util/retry",
        "//pkg/util/stop",
        "//pkg/util/syncutil",
        "//pkg/util/uuid",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/cockroachdb/pebble",
        "//vendor/github.com/cockroachdb/redact",
        "//vendor/github.com/dustin/go-humanize",
        "//vendor/github.com/spf13/pflag",
    ],
)

go_test(
    name = "base_test",
    srcs = [
        "addr_validation_test.go",
        "cluster_id_test.go",
        "main_test.go",
        "node_id_test.go",
        "store_spec_test.go",
    ],
    deps = [
        ":base",
        "//pkg/roachpb",
        "//pkg/security",
        "//pkg/security/securitytest",
        "//pkg/testutils",
        "//pkg/util/leaktest",
        "//pkg/util/log",
        "//pkg/util/uuid",
        "//vendor/github.com/cockroachdb/errors",
        "//vendor/github.com/stretchr/testify/require",
    ],
)
