load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ccl",
    srcs = ["ccl_init.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/ccl",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/backup",
        "//pkg/base",
        "//pkg/ccl/auditloggingccl",
        "//pkg/ccl/buildccl",
        "//pkg/ccl/changefeedccl",
        "//pkg/ccl/cliccl",
        "//pkg/ccl/gssapiccl",
        "//pkg/ccl/jwtauthccl",
        "//pkg/ccl/kvccl",
        "//pkg/ccl/kvccl/kvtenantccl",
        "//pkg/ccl/ldapccl",
        "//pkg/ccl/multiregionccl",
        "//pkg/ccl/multitenantccl",
        "//pkg/ccl/oidcccl",
        "//pkg/ccl/partitionccl",
        "//pkg/ccl/pgcryptoccl",
        "//pkg/ccl/securityccl/fipsccl",
        "//pkg/ccl/storageccl",
        "//pkg/ccl/storageccl/engineccl",
        "//pkg/ccl/utilccl",
        "//pkg/ccl/workloadccl",
        "//pkg/crosscluster/logical",
        "//pkg/crosscluster/physical",
        "//pkg/crosscluster/producer",
        "//pkg/server/license",
    ],
)
